Forge Beta: 0#-##-2013 ver 1.4.6


13### cards in total.


-------------
Release Notes
-------------

- Home Screen UI Improvements -
The menu on the Home Screen is now scrollable using either a mouse wheel or arrow buttons that will appear at the top or bottom if scrolling can occur in that direction
The Deck Editor and Exit Forge buttons are now laid out vertically to make it easier to add launch buttons for new screens coming down the pipeline (hint, hint...)
The menu on the Home Screen has been made narrower and the logo size increased to decrease whitespace and increase the width of the main panel


- Forge now requires Java 7 -
Please update your Java runtime environment. At this point Forge versions 1.4.2 and above will no longer run under Java 6.


- New M14 cards -
Forge now includes most of the new M14 cards. It may take a few days before these new card pictures become available for downloading via the "Download LQ Card Pictures" button. The LQ set pictures tend to take a few more weeks to process before they become available for downloading via the "Download LQ Set Pictures" button. Please be patient.


- Match and Deck Editor Layout problems -
The match and deck editor windows contain panels that can be moved and/or resized. The changes that you make are saved to files that are named "editor.xml" and "match.xml". These files can be found in your userDir/preferences/ directory.

Sometimes people will decide that they do not like the changes that they made and wish to go back to the original layout. To reset layouts to default, go to the Game Settings -> Preferences -> Troubleshooting section. You will find at this location two buttons that will reset the match layout and the deck editor layouts.

Also use the mentioned measure if your match or deckeditor won't start - it would help in 90% of the cases.


- The Mac OS X application -
At this time Forge now requires Java 7 and will no longer run under Java 6.
